--- a/style.css
+++ b/style.css
@@ -1,397 +1,411 @@
-@import url('https://fonts.googleapis.com/css2?family=Bokor&family=Cutive+Mono&family=DotGothic16&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bokor&family=Cutive+Mono&family=DotGothic16&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
 
-*{
-  margin-left:0 ;
-    padding: 0;
-    box-sizing: border-box;
-    min-width: 0;
-    /* font-family: sans-serif; */
-    /* color: white; */
+* {
+	margin-left: 0;
+	padding: 0;
+	box-sizing: border-box;
+	min-width: 0;
+	/* font-family: sans-serif; */
+	/* color: white; */
 }
 :root {
-  --yellow-color: rgba(255, 208, 116);
-  --turquoise-color: rgba(23, 241, 209);
-  --purple-color: rgba(176, 135, 255);
-  --color-main: #a474ff;
-  --color-main-second: #17f1d1;
-  --color-main-third: #272727;
-}
-html, body{
-  /* margin: 0; */
+	--yellow-color: rgba(255, 208, 116);
+	--turquoise-color: rgba(23, 241, 209);
+	--purple-color: rgba(176, 135, 255);
+	--color-main: #a474ff;
+	--color-main-second: #17f1d1;
+	--color-main-third: #272727;
 }
 
-.circle{
-    --circle-size:40px;
-    position: fixed;
-    height: 40px;
-    width: 40px;
-    border: 1px solid rgb(232, 90, 79 );
-    border-radius: 100%;
-    top: calc(var(--circle-size) / 2 * -1);
-    left: calc(var(--circle-size) / 2 * -1);
-    left: -20px;
-    pointer-events: none;
-    z-index: 1;
+/* html,
+body {
+	margin: 0;
+} */
+
+.circle {
+	--circle-size: 40px;
+	position: fixed;
+	height: 40px;
+	width: 40px;
+	border: 1px solid rgb(232, 90, 79);
+	border-radius: 100%;
+	top: calc(var(--circle-size) / 2 * -1);
+	left: calc(var(--circle-size) / 2 * -1);
+	left: -20px;
+	pointer-events: none;
+	z-index: 1;
 }
 
-canvas{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #e1dfe1;
-    overflow: hidden;
+canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #e1dfe1;
+	overflow: hidden;
 }
 
-header,footer{
-  position: relative;
-  width: 100%;
-  outline: 2px solid #CCC;
-  border: 1px solid #999;
+header,
+footer {
+	position: relative;
+	width: 100%;
+	outline: 2px solid #ccc;
+	border: 1px solid #999;
 }
 
-footer{
-  position: absolute;
-  bottom: 0;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 600;
-  /* padding: 8px 0; */
+footer {
+	position: absolute;
+	bottom: 0;
+	text-align: center;
+	font-size: 16px;
+	font-weight: 600;
+	overflow: hidden;
+	/* padding: 8px 0; */
 }
 
-header .logo{
-  font-weight: bolder;
-  font-size: medium;
+header .logo {
+	font-weight: bolder;
+	font-size: medium;
 }
 
-header{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+header {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
 }
 
-nav ul li{
-  list-style: none;
-  display: inline-block;
+nav ul li {
+	list-style: none;
+	display: inline-block;
 }
 
-
-nav ul li a{
-  text-decoration: none;
-  color: black;
-  font-size: 20px;
-  font-weight: bold;
-  justify-content: space-evenly;
+nav ul li a {
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+	font-weight: bold;
+	justify-content: space-evenly;
 }
 
-.nav-a-letter{
-  text-transform: uppercase;
+.nav-a-letter {
+	text-transform: uppercase;
 }
 /* LOGO */
 
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 .nav-ul {
-  font-weight: bolder;
-  padding-top: 3px;
-  padding-bottom: 3px;
-  text-transform: lowercase;
-  font-size: 3rem;
-  letter-spacing: -0.05em;
+	font-weight: bolder;
+	padding-top: 3px;
+	padding-bottom: 3px;
+	text-transform: lowercase;
+	font-size: 3rem;
+	letter-spacing: -0.05em;
 }
 
 .nav-li {
-  position: relative;
-  line-height: 0.76471;
+	position: relative;
+	line-height: 0.76471;
 }
 
 .nav-li + .nav-li {
-  margin-top: 1rem;
+	margin-top: 1rem;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
+	color: inherit;
+	text-decoration: none;
+	cursor: pointer;
 }
 
 .nav-a {
-  display: inline-block;
-  position: relative;
-  transition: 0.4s linear color;
+	display: inline-block;
+	position: relative;
+	transition: 0.4s linear color;
 }
 
 .nav-a-letters {
-  display: flex;
+	display: flex;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .nav-a > * {
-    pointer-events: none;
-  }
+	.nav-a > * {
+		pointer-events: none;
+	}
 }
 
 .nav-a-stripe {
-  position: absolute;
-  background-color: var(--purple-color);
-  width: calc(100% + 0.075em);
-  left: 0;
-  top: 17px;
-  height: 0.115em;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.8s cubic-bezier(0.4, 0, 0, 1);
+	position: absolute;
+	background-color: var(--purple-color);
+	width: calc(100% + 0.075em);
+	left: 0;
+	top: 17px;
+	height: 0.115em;
+	transform: scaleX(0);
+	transform-origin: right;
+	transition: transform 0.8s cubic-bezier(0.4, 0, 0, 1);
 }
 
 .nav-a-stripe--yellow {
-  background-color: var(--yellow-color);
-  transition-delay: 0.1s;
+	background-color: var(--yellow-color);
+	transition-delay: 0.1s;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .nav-a:hover .nav-a-stripe {
-    transform-origin: left;
-    transform: scaleX(1);
-  }
-  .nav-a:hover .nav-a-stripe--yellow {
-    transition-delay: 0s;
-  }
+	.nav-a:hover .nav-a-stripe {
+		transform-origin: left;
+		transform: scaleX(1);
+	}
+	.nav-a:hover .nav-a-stripe--yellow {
+		transition-delay: 0s;
+	}
 }
 
 .nav-a-stripe--turquoise {
-  background-color: var(--turquoise-color);
-  transition-delay: 50ms;
+	background-color: var(--turquoise-color);
+	transition-delay: 50ms;
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .nav-a:hover .nav-a-stripe--turquoise {
-    transition-delay: 50ms;
-  }
-  .nav-a:hover .nav-a-stripe--purple {
-    transition-delay: 0.1s;
-  }
+	.nav-a:hover .nav-a-stripe--turquoise {
+		transition-delay: 50ms;
+	}
+	.nav-a:hover .nav-a-stripe--purple {
+		transition-delay: 0.1s;
+	}
 }
 
 .nav-a-letters-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: flex;
 }
 
 .nav-a-letter {
-  display: block;
-  will-change: transform, opacity;
+	display: block;
+	will-change: transform, opacity;
 }
 
 .nav-a-letters .nav-a-letter:nth-child(2n) {
-  opacity: 0;
+	opacity: 0;
 }
 
 .nav-a-letters-top .nav-a-letter:nth-child(2n + 1) {
-  opacity: 0 !important;
+	opacity: 0 !important;
 }
-
 
 /* button get in touch */
 
 .container-btn-git {
-  padding-top: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row-reverse;
+	padding-top: 3px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: row-reverse;
 }
 .wrapper {
-  display: flex;
-  justify-content: center;
-  width: 11rem;
+	display: flex;
+	justify-content: center;
+	width: 11rem;
 }
 
+.btn {
+	display: inline-block;
+	height: 2rem;
+	width: 10rem;
+	position: relative;
+	border: none;
+	border-radius: 999rem;
+	cursor: pointer;
+	overflow: hidden;
+	background-color: transparent;
+}
+.btn:hover .btn__bg {
+	scale: 0.94;
+}
+.btn:hover .btn__text-out {
+	transition: transform 1s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
+	transform: translateY(-33.333333%);
+	opacity: 0;
+}
+.btn:hover .btn__text-in {
+	transition: 1s all cubic-bezier(0.32, 0.99, 0.49, 0.99);
+	transform: translateY(0);
+	opacity: 1;
+}
+.btn:hover .btn__bg__layer-first,
+.btn:hover .btn__bg__layer-second,
+.btn:hover .btn__bg__layer-third {
+	border-radius: 60% 60% 0 0;
+	transform: translateY(1rem);
+}
+.btn:hover .btn__bg__layer-first {
+	transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 200ms,
+		border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 270ms;
+}
+.btn:hover .btn__bg__layer-second {
+	transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 300ms,
+		border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 470ms;
+}
+.btn:hover .btn__bg__layer-third {
+	transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 380ms,
+		border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 670ms;
+}
+.btn__text-out,
+.btn__text-in {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	inset: 0;
+	margin: auto;
+	font-weight: 400;
+	font-size: 20px;
+	z-index: 10;
+	font-family: Poppins, system-ui;
+}
+.btn__text-in {
+	opacity: 0;
+	transform: translateY(33.333333%);
+}
+.btn__bg {
+	height: inherit;
+	width: inherit;
+	transition: scale 1.5s cubic-bezier(0.19, 1, 0.22, 1);
+	background-color: var(--color-main-third);
+	border-radius: 999rem;
+	overflow: hidden;
+}
+.btn__bg__layer {
+	position: absolute;
+	display: block;
+	bottom: 0;
+	left: 50%;
+	translate: -50%;
+	border-radius: 999rem 999rem 0 0;
+	border: none;
+	width: 120%;
+	height: 200%;
+	z-index: 20;
+	transform: translateY(100%) translateX(0);
+}
+.btn__bg__layer-first {
+	background-color: var(--color-main);
+}
+.btn__bg__layer-second {
+	background-color: var(--color-main-second);
+}
+.btn__bg__layer-third {
+	background-color: var(--color-main-third);
+}
 
- .btn {
-	 display: inline-block;
-	 height: 2rem;
-	 width: 10rem;
-	 position: relative;
-	 border: none;
-	 border-radius: 999rem;
-	 cursor: pointer;
-	 overflow: hidden;
-	 background-color: transparent;
+.wrapper .btn .btn__text-out {
+	color: #fff;
 }
- .btn:hover .btn__bg {
-	 scale: 0.94;
-}
- .btn:hover .btn__text-out {
-	 transition: transform 1s cubic-bezier(0.32, 0.99, 0.49, 0.99), opacity 0.4s;
-	 transform: translateY(-33.333333%);
-	 opacity: 0;
-}
- .btn:hover .btn__text-in {
-	 transition: 1s all cubic-bezier(0.32, 0.99, 0.49, 0.99);
-	 transform: translateY(0);
-	 opacity: 1;
-}
- .btn:hover .btn__bg__layer-first, .btn:hover .btn__bg__layer-second, .btn:hover .btn__bg__layer-third {
-	 border-radius: 60% 60% 0 0;
-	 transform: translateY(1rem);
-}
- .btn:hover .btn__bg__layer-first {
-	 transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 200ms, border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 270ms;
-}
- .btn:hover .btn__bg__layer-second {
-	 transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 300ms, border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 470ms;
-}
- .btn:hover .btn__bg__layer-third {
-	 transition: transform 1s cubic-bezier(0.19, 1, 0.22, 1) 380ms, border-radius 0.2s cubic-bezier(0.19, 1, 0.22, 1) 670ms;
-}
- .btn__text-out, .btn__text-in {
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 position: absolute;
-	 inset: 0;
-	 margin: auto;
-	 font-weight: 400;
-	 font-size: 20px;
-	 z-index: 10;
-	 font-family: Poppins, system-ui;
-}
- .btn__text-in {
-	 opacity: 0;
-	 transform: translateY(33.333333%);
-}
- .btn__bg {
-	 height: inherit;
-	 width: inherit;
-	 transition: scale 1.5s cubic-bezier(0.19, 1, 0.22, 1);
-	 background-color: var(--color-main-third);
-	 border-radius: 999rem;
-	 overflow: hidden;
-}
- .btn__bg__layer {
-	 position: absolute;
-	 display: block;
-	 bottom: 0;
-	 left: 50%;
-	 translate: -50%;
-	 border-radius: 999rem 999rem 0 0;
-	 border: none;
-	 width: 120%;
-	 height: 200%;
-	 z-index: 20;
-	 transform: translateY(100%) translateX(0);
-}
- .btn__bg__layer-first {
-	 background-color: var(--color-main);
-}
- .btn__bg__layer-second {
-	 background-color: var(--color-main-second);
-}
- .btn__bg__layer-third {
-	 background-color: var(--color-main-third);
-}
-
-.wrapper .btn .btn__text-out{
-  color: #fff;
-}
-.wrapper .btn .btn__text-in{
-  color: #fff;
+.wrapper .btn .btn__text-in {
+	color: #fff;
 }
 
 /* body */
-.hero{
-  padding-top: 3px;
-  padding-left: 2px;
-  position: relative;
-  display: flex;
-  height: calc(100vh - 117px);
-  width: calc(100vw - 1px);
-  position: absolute;
-  color: #999;
-}
-.hero .sidebar{
-  width: 100px;
-  /* background-color: #17f1d1; */
-  border: 1px solid #999;
-  overflow: hidden;
+.hero {
+	padding-top: 3px;
+	padding-left: 2px;
+	padding-bottom: 1px;
+	position: relative;
+	display: flex;
+	height: calc(100vh - 117px);
+	width: calc(100vw - 1px);
+	position: absolute;
+	color: #999;
 }
 
-.sidebar-items{
-  
+.hero .sidebar {
+	width: 100px;
+	border: 1px solid #999;
 }
 
-.hero_marque_mid{
-  background-color: #17f1d1;
-  transform:rotate(90deg) ;
-  z-index: 100;
+.sidebar-items {
+	height: 100%;
+	display: flex;
+	justify-content: space-between;
+}
+
+.hero_marque_mid {
+	/* background-color: #17f1d1; */
+	/* transform:rotate(90deg) ; */
+	z-index: 100;
+	height: calc(100% - 100px);
+	overflow: hidden;
 }
 
 .hero_marque {
-
-  background-color: #17f1d1;
-  display: flex;
-  user-select: none;
-  gap: 1rem;
+	transform: rotate(90deg);
+	/* background-color: #17f1d1; */
+	display: flex;
+	user-select: none;
+	gap: 1rem;
 }
 
-.hero_marque .hero_marque_inner{
-
-  text-orientation: upright;
-  flex-shrink: 0;
-  display: flex;
-  justify-content: space-around;
-  background-color: #17f1d1;
-  gap: 1rem ;
+.hero_marque .hero_marque_inner {
+	text-orientation: upright;
+	flex-shrink: 0;
+	display: flex;
+	justify-content: space-around;
+	/* background-color: #17f1d1; */
+	gap: 1rem;
 }
-.hero_marque .hero_marque_inner li{
-  font-family: "poppins";
-  color: #272727;
-  font-size: 10px;
-  font-weight: 600;
-  line-height: 1.5;
-  background-color: #17f1d1;
-  text-orientation: upright;
-  text-transform: uppercase;
+.hero_marque .hero_marque_inner li {
+	font-family: "poppins";
+	color: #272727;
+	font-size: 10px;
+	font-weight: 600;
+	line-height: 1.5;
+	/* background-color: #17f1d1; */
+	text-orientation: upright;
+	text-transform: uppercase;
 
-  animation: marque 10000ms linear infinite;
 }
 
 @keyframes marque {
-  0%{
-    transform: translateX(0);
-  }
-  
-  100% {
-    transform: translateX(-100%);
-  }
+	from {
+		transform: translateX(0);
+	}
+
+	to {
+		transform: translateX(calc(-100% - 1rem));
+	}
 }
 
-.hero .sidebar .sidebar-items .links{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: column;
-  bottom: 0;
-  position: absolute;
-  padding-left: 40px;
+.hero_marque .hero_marque_inner li {
+	animation: marque 6000ms linear infinite;
 }
 
-.hero .sidebar .sidebar-items .links span a{
-  font-family: "poppins";
-  font-weight: 600;
-  color: #272727;
+.hero .sidebar .sidebar-items .links {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	flex-direction: column;
+	bottom: 0;
+	position: absolute;
+	padding-left: 40px;
 }
-.hero .contents{
-  padding-left: 20px;
-  width: 95vw;
-  /* background-color: #17f1d1;
+
+.link {
+	font-family: "poppins";
+	font-size: 20px;
+	font-weight: 600;
+	color: #272727;
+}
+.hero .contents {
+	padding-left: 20px;
+	width: 95vw;
+	/* background-color: #17f1d1;
   border: 1px solid #999; */
 }
