--- a/style.css
+++ b/style.css
@@ -18,6 +18,15 @@
 	--color-main-third: #272727;
 }
 
+body {
+   -ms-overflow-style: none;  
+    scrollbar-width: none;  
+    overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+    display: none;  
+}
 /* html,
 body {
 	margin: 0;
@@ -49,12 +58,16 @@ canvas {
 
 header,
 footer {
-	position: relative;
+	position: absolute;
 	width: 100%;
 	outline: 2px solid #ccc;
 	border: 1px solid #999;
 }
 
+header{
+	position: absolute;
+	height: 6vh;
+}
 footer {
 	position: absolute;
 	bottom: 0;
@@ -327,6 +340,7 @@ a {
 }
 
 .hero .sidebar {
+	height: calc(100vh - 95px);
 	width: 100px;
 	border: 1px solid #999;
 }
@@ -404,8 +418,91 @@ a {
 	color: #272727;
 }
 .hero .contents {
+	height:calc(100vh - 95px);
 	padding-left: 20px;
 	width: 95vw;
 	/* background-color: #17f1d1;
   border: 1px solid #999; */
+
+     overflow: hidden; 
+     overflow-y: scroll; 
+    scroll-behavior: smooth;
+
+	outline: #272727;
+}
+
+.contents::-webkit-scrollbar {
+width: 10px;
+}
+.contents::-webkit-scrollbar-track {
+
+box-shadow: inset 0 0 5px #181818; 
+border-radius: 10px;
+}
+.contents::-webkit-scrollbar-thumb {
+    height: 1px;
+    background:#272727; 
+    border-radius: 10px;
+}
+.contents::-webkit-scrollbar-thumb:hover {
+background:rgba(0, 0, 0, 0.5); 
+}
+
+/* project */
+.container_projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 200vh;
+  overflow: hidden;
+}
+
+.text_proj {
+  font-size: 10vw;
+  letter-spacing: -.01em;
+  line-height: 100%;
+  margin: 0;
+  
+  width: 100%;
+  color: rgb(182, 182, 182, 0.2);
+  background: linear-gradient(to right, #b6b6b6, #b6b6b6) no-repeat;
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 0%;
+  transition: background-size cubic-bezier(.1,.5,.5,1) 0.5s;
+  
+
+  border-bottom: 1px solid #2F2B28;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  position: relative;
+}
+
+.span_proj {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #4246ce;
+  color: #0D0D0D;
+  
+  clip-path: polygon(0 50%, 100% 50%, 100% 50%, 0 50%);
+  transform-origin: center;
+  transition: all cubic-bezier(.1,.5,.5,1) 0.4s;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.text_proj:hover > span {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
+
+.a_proj {
+  text-decoration: none;
+  color: inherit;
 }
