--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ footer {
 header {
 	position: a;
 	height: 60px;
-	z-index: 100;
+	z-index: 1;
 }
 footer {
 	position: absolute;
@@ -655,19 +655,18 @@ section {
 	margin: 0px;
 	padding: opx;
 	font-family: "Poppins";
-	font-size: 5px;
+	font-size: 15px;
 }
 
 .ce_date {
 	margin: 0px;
 	padding-left: 10px;
 	font-family: "Sans Sherif";
-	font-weight: light;
-	font-size: 2.5px;
+	font-weight: medium;
+	font-size: 15px;
 }
 
 /* skills chart*/
-
 #myChart {
 	cursor: crosshair;
 	width: 40vw;
